--- a/app.css
+++ b/app.css
@@ -25,3 +25,16 @@ body {
 .loser {
   color: red;
 }
+
+.imagesContainer {
+  background-color: #3b3b3b;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid #3b3b3b;
+  color: white;
+  text-align: center;
+  display: inline-block;
+}
+.imagesContainer img {
+  display: inline-block;
+}
